# aditBoard-rpico

rpico/: CMakeLists.txt
rpico/include/: FreeRTOSConfig.h
rpico/src/: main.c  uart_rx.pio
